[gd_scene load_steps=31 format=2]

[ext_resource path="res://sprites/player/jump_1.png" type="Texture" id=1]
[ext_resource path="res://sprites/player/jump_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/player/run_0.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/run_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/run_2.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/idle_0.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/cry_2.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/idle_2.png" type="Texture" id=8]
[ext_resource path="res://sprites/player/idle_1.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/jump_0.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/cry_0.png" type="Texture" id=11]
[ext_resource path="res://sprites/player/cry_1.png" type="Texture" id=12]
[ext_resource path="res://scripts/player.gd" type="Script" id=13]
[ext_resource path="res://sprites/player/hurt_0.png" type="Texture" id=14]
[ext_resource path="res://sprites/player/hurt_1.png" type="Texture" id=15]
[ext_resource path="res://sprites/player/hurt_2.png" type="Texture" id=16]
[ext_resource path="res://music/player_jump.mp3" type="AudioStream" id=17]
[ext_resource path="res://music/player_hit.mp3" type="AudioStream" id=18]
[ext_resource path="res://music/player_dead.mp3" type="AudioStream" id=19]
[ext_resource path="res://sprites/effects/Dust_Particle.png" type="Texture" id=20]
[ext_resource path="res://sprites/effects/Shadow.png" type="Texture" id=21]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.525424, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.782209 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.57362 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.8
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.8
angular_velocity = 50.0
angular_velocity_random = 0.8
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "jump",
"speed": 1.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 12 ) ],
"loop": true,
"name": "cry",
"speed": 4.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "hurt",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
height = 24.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 11.5

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 1.5 )

[node name="player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 565
script = ExtResource( 13 )

[node name="camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = -370

[node name="steps" type="Particles2D" parent="."]
position = Vector2( 0, 23.8523 )
emitting = false
amount = 10
lifetime = 0.7
one_shot = true
speed_scale = 0.3
explosiveness = 0.3
randomness = 0.8
process_material = SubResource( 5 )
texture = ExtResource( 20 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0.91428, 13.4825 )
texture = ExtResource( 21 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "idle"
playing = true

[node name="collision_shape" type="CollisionShape2D" parent="."]
modulate = Color( 0.117647, 1, 0, 1 )
position = Vector2( 1, 1 )
shape = SubResource( 7 )

[node name="raycast" type="RayCast2D" parent="."]
position = Vector2( 0.556808, 21.8864 )
scale = Vector2( 5, 1 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 529

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 4

[node name="collision_shape" type="CollisionShape2D" parent="hurtbox"]
modulate = Color( 0.00784314, 0, 1, 1 )
position = Vector2( 1.5, 0 )
shape = SubResource( 8 )

[node name="collision_shape2" type="CollisionShape2D" parent="hurtbox"]
modulate = Color( 0.00784314, 0, 1, 1 )
position = Vector2( 1, 17.5 )
shape = SubResource( 9 )

[node name="music" type="Node2D" parent="."]
visible = false

[node name="jump" type="AudioStreamPlayer2D" parent="music"]
stream = ExtResource( 17 )

[node name="hit" type="AudioStreamPlayer2D" parent="music"]
stream = ExtResource( 18 )

[node name="dead" type="AudioStreamPlayer2D" parent="music"]
stream = ExtResource( 19 )

[node name="timer" type="Node2D" parent="."]
visible = false

[node name="timer_damage" type="Timer" parent="timer"]
wait_time = 0.5
one_shot = true

[node name="timer_invencibility" type="Timer" parent="timer"]
wait_time = 0.333
one_shot = true

[node name="timer_death" type="Timer" parent="timer"]
one_shot = true

[node name="knockback" type="Node2D" parent="."]
visible = false

[node name="left" type="RayCast2D" parent="knockback"]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 20

[node name="right" type="RayCast2D" parent="knockback"]
position = Vector2( 1, 0 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 20

[node name="push" type="Node2D" parent="."]
visible = false

[node name="right" type="RayCast2D" parent="push"]
position = Vector2( 0, 12.5 )
rotation = 1.5708
cast_to = Vector2( 0, -15 )
collision_mask = 256

[node name="left" type="RayCast2D" parent="push"]
position = Vector2( 0, 12.5 )
rotation = 1.5708
cast_to = Vector2( 0, 15 )
collision_mask = 256

[connection signal="animation_finished" from="animated_sprite" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="hurtbox" to="." method="_on_hurtbox_area_exited"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="hurtbox" to="." method="_on_hurtbox_body_exited"]
[connection signal="timeout" from="timer/timer_damage" to="." method="_on_timer_damage_timeout"]
[connection signal="timeout" from="timer/timer_invencibility" to="." method="_on_timer_invencibility_timeout"]
[connection signal="timeout" from="timer/timer_death" to="." method="_on_timer_death_timeout"]
